--- a/style.css
+++ b/style.css
@@ -1,7 +1,93 @@
-#menu
-{
+
+#menu{
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: rgb(240, 191, 191);
 	position: fixed;
 	width: 100%;
-	height: 35px;
-	background: white;
-}
+	z-index: 1;
+  }
+  
+  li {
+	float: left;
+  }
+  
+  li a {
+	display: block;
+	color: rgb(20, 18, 18);
+	text-align: center;
+	padding: 12px 20px;
+	text-decoration: none;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	font-size: 15px;
+	font-weight: bold;
+  }
+  
+  li a:hover {
+	background-color: rgb(250, 96, 96);
+  }
+  body{
+	background: #FFEEEE;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #DDEFBB, #FFEEEE);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #DDEFBB, #FFEEEE); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  }
+
+  section{
+	text-align: center;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  }
+  h3{
+	text-decoration: underline;
+	text-align: center;
+	text-shadow:5px 5px 10px rgb(250, 96, 96);
+  }
+  
+  /* Clearfix (clear floats) */
+  .row::after {
+	content: "";
+	clear: both;
+	display: table;
+  }
+  .container {
+	float: left;
+	position: relative;
+	width: 24%;
+	height: 300px;
+  }
+  
+  .image {
+	display: block;
+	width: 300px;
+	height: 300px;
+	border-radius: 14px;
+  }
+  
+  .overlay {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	width: 300px;
+	height: 300px;
+	opacity: 0;
+	transition: .5s ease;
+	background-color: rgb(240, 191, 191);
+	border-radius: 14px;
+  }
+  
+  .container:hover .overlay {
+	opacity: 0.8;
+  }
+  
+  .text {
+	color: rgb(82, 8, 8);
+	font-size: 30px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+  }
