--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	font-size: 15px;
 	font-weight: bold;
+	overflow: inherit;
   }
   
   li a:hover {
@@ -91,3 +92,43 @@ background: linear-gradient(to right, #DDEFBB, #FFEEEE); /* W3C, IE 10+/ Edge, F
 	transform: translate(-50%, -50%);
 	-ms-transform: translate(-50%, -50%);
   }
+
+  #contact{
+	  text-align: center;
+  }
+
+  input[type=text], textarea {
+	box-sizing: border-box;
+	border-radius: 4px;
+	border: 1.5px solid black;
+	background-color: #FFEEEE;
+	overflow: visible;
+  }
+
+  input[type=text]:focus {
+	background-color: rgb(250, 209, 209);
+  }
+  input[type=submit],input[type=reset]{
+	background-color: rgba(103, 129, 104, 0.822);
+	border: none;
+	color: white;
+	padding: 16px 32px;
+	text-decoration: none;
+	margin: 4px 2px;
+	cursor: pointer;
+	font-size: 15px;
+	border-radius: 4px;
+  }
+  .bouncy{
+	animation:bouncy 5s infinite linear;
+	position:relative;
+	} 
+	@keyframes bouncy {
+		0%   {top: 0em;}
+		40%  {top:0em;}
+		43%  {top:-0.9em;}
+		46% {top: 0em;}
+		48% {top: -0.4em;}
+		50% {top:0em}
+		100%{top:0em}
+	  }
